# mantle-lint

./: .gitignore  CLAUDE.md  DEMO.md  README.md  pyproject.toml
.github/workflows/: gas-regression.yml  mantle-lint.yml  tests.yml
benchmarks/: README.md  bench_mnt001.py  gas-snapshot.json  gas_regression.py  requirements.txt  results.json
benchmarks/contracts/: Benchmark.sol
docs/: tencent-endpoint.md
examples/: CleanStaking.sol  VulnerableStaking.sol
mantle_lint/: __init__.py  ai.py  benchmarks.py  cli.py  engine.py  report.py  rules.py
scripts/: ai_smoke.py  demo.py
tests/: test_rules.py
web/: README.md  analyze.js  index.html  lint.js  parity.mjs  samples.js  solc-worker.js  vercel.json
